--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
   <section id="projects">
     <h2>Projects</h2>
     <div class="project">
-      <h3>Project Title</h3>
-      <p>Short description of the project.</p>
-      <a href="https://github.com/codypimentel/project-repo" target="_blank">GitHub</a>
+      <h3>BlackJack</h3>
+      <p>A simple BlackJack game playable on desktop.</p>
+      <a href="https://github.com/codypimentel/projects" target="_blank">GitHub</a>
     </div>
   </section>
 
   <section id="contact">
     <h2>Contact</h2>
     <p>Email: codypimentel@gmail.com</p>
-    <p>GitHub: <a href="https://github.com/codypimentel" target="_blank">yourusername</a></p>
+    <p>GitHub: <a href="https://github.com/codypimentel" target="_blank">Cody Pimentel</a></p>
   </section>
 </body>
 </html>
