--- a/index.html
+++ b/index.html
@@ -14,15 +14,20 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>I’m a passionate programmer learning web development and building cool projects.</p>
+    <p>I’m a passionate programmer and gamer, always practicing and getting better.</p>
   </section>
 
   <section id="projects">
     <h2>Projects</h2>
     <div class="project">
       <h3>BlackJack</h3>
-      <p>A simple BlackJack game playable on desktop.</p>
+      <p>A simple BlackJack game.</p>
       <a href="https://github.com/codypimentel/blackjack" target="_blank">GitHub</a>
+    </div>
+    <div class="project">
+      <h3>Cash Register</h3>
+      <p>A simple cash register web page.</p>
+      <a href="https://github.com/codypimentel/cashregister" target="_blank">GitHub</a>
     </div>
   </section>
 
