--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <div class="project">
       <h3>Blackjack Game</h3>
-      <p>A fun browser-based Blackjack game with betting, deck management, and game logic using JavaScript and HTML.
+      <p>A Blackjack game with betting, deck management, and game logic.
         This project runs as a Python program and is not hosted live. Clone the repo and run blackjack.py to try it out.
       </p>
       <a href="https://github.com/codypimentel/blackjack" target="_blank">📁 GitHub Repo</a>
